# CSC-411

Assignments/A1/: readme.txt
Assignments/A1/brightness/: Cargo.toml
Assignments/A1/brightness/src/: main.rs
Assignments/A1/fgroups/src/: main.rs
Assignments/A2/: readme.txt
Assignments/A2/array2/: Cargo.toml
Assignments/A2/array2/src/: lib.rs
Assignments/A2/sudoku/: Cargo.toml
Assignments/A2/sudoku/src/: main.rs
Assignments/A3/array2/src/: lib.rs
Assignments/A3/ppmtrans/: Cargo.toml
Assignments/A3/ppmtrans/src/: main.rs
Assignments/A4/: readme.txt
Assignments/A4/array2/: Cargo.toml
Assignments/A4/array2/src/: lib.rs
Assignments/A4/bitpack/src/: bitpack.rs
Assignments/A4/rpeg/src/: codec.rs  dct.rs  format.rs  lib.rs  main.rs  rgb.rs
Assignments/A5/: readme.txt
Assignments/A5/src/: bitpack.rs  lib.rs  machine.rs  main.rs  memory.rs
Assignments/A6/: Cargo.toml  readme.txt
Assignments/A6/src/: machine.rs  main.rs  memory.rs
Labs/bash-lab/: test.sh
Labs/ppmdiff-lab/array2/src/: lib.rs
Labs/ppmdiff-lab/ppmdiff/: Cargo.toml
Labs/ppmdiff-lab/ppmdiff/src/: main.rs
Labs/rumdump-lab/butpack/src/: lib.rs
Labs/rumdump-lab/rumdump/: Cargo.toml
Labs/rumdump-lab/rumdump/src/: main.rs  rumdis.rs  rumloas.rs
