[package]
name = "ppmtrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csc411_image = "0.5.2"
clap = { version = "4.5.1", features = ["derive"] }
array2 = { path = "/autograder/student/array2/" }
